Fix #362
Fix #362 Html tags are not showing because we have converted to this wp_strip_all_tags for live preview

--- a/assets/css/adminstyle.css
+++ b/assets/css/adminstyle.css
@@ -275,3 +275,7 @@ font-weight: bold;
 .order-notess h5 {
 	font-size: 15px;
 }
+.footer-content * {
+    font-size: inherit;
+    color: inherit;
+}
